impact assessment left and right panel top align fix

--- a/src/main/webapp/skins/CQT/CQT.css
+++ b/src/main/webapp/skins/CQT/CQT.css
@@ -303,3 +303,11 @@ td .bordered {
 .ui-treetable.ui-treetable-resultHier .ui-treetable-selectable-node .ui-chkbox.ui-selection {
 	display: none;
 }
+
+/**============Impact assessment ======**/
+.v-align-middle {
+	vertical-align: middel;
+}
+.v-align-top {
+	vertical-align: top;
+}
